# Socrates-core

./: .gitignore  API.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-and-build.yml  tests.yml
docs/: LIBRARY_GUIDE.md
src/socratic_core/: __init__.py  agent_orchestrator.py  base_service.py  config.py  connection_pool.py  database.py  event_bus.py  event_store.py  events.py  exceptions.py  migrations.py  multi_env_config.py  orchestrator.py  responses.py  service_mesh.py  shared_models.py  utils.py
src/socratic_core/agents/: __init__.py  base.py
src/socratic_core/api/: __init__.py
src/socratic_core/cli/: __init__.py
src/socratic_core/commands/: __init__.py  base.py
src/socratic_core/config/: __init__.py  config.py
src/socratic_core/events/: __init__.py  emitter.py  event_types.py
src/socratic_core/exceptions/: __init__.py
src/socratic_core/logging/: __init__.py
src/socratic_core/monitoring/: __init__.py  metrics.py  tracing.py
src/socratic_core/utils/: __init__.py  datetime_helpers.py  project_templates.py  ttl_cache.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_database.py  test_events.py  test_events.py.disabled  test_events_simple.py  test_exceptions.py  test_exceptions.py.disabled  test_orchestrator.py  test_utils.py  test_utils.py.disabled
